force-app/main/default/objects/LT_Logistics_Unit__c/LT_Logistics_Unit__c.object-meta.xml
<CustomObject>
    <description>Representa as unidades físicas e administrativas da operação logística, incluindo regionais, centros de distribuição, bases próprias, bases franqueadas, DropOffs, pontos de apoio e escritórios.</description>
    <label>Unidade Logística</label>
    <nameField>
        <label>Nome da Unidade</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unidades Logísticas</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>