force-app/main/default/objects/LT_Logistics_Unit__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Cidade onde a unidade logística está fisicamente localizada.</description>
    <inlineHelpText>Informe o nome oficial da cidade, utilizando acentuação e sem incluir a sigla do estado. Exemplo: São José dos Pinhais.</inlineHelpText>
    <label>Cidade</label>
    <length>80</length>
    <type>Text</type>
</CustomField>