force-app/main/default/objects/LT_Logistics_Unit__c/fields/Daily_Operational_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Daily_Operational_Capacity__c</fullName>
    <description>Quantidade máxima estimada de pacotes que a unidade consegue processar por dia em condições normais.</description>
    <inlineHelpText>Informe a capacidade diária estimada em número de pacotes, utilizando somente números inteiros.</inlineHelpText>
    <label>Capacidade Operacional Diária</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>