force-app/main/default/objects/LT_Logistics_Unit__c/fields/Days_In_Operation__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Operation__c</fullName>
    <description>Calcula automaticamente a quantidade de dias entre o início da operação e a data atual ou a data de encerramento.</description>
    <formula>IF(
    ISBLANK(Operation_Start_Date__c),
    NULL,
    MAX(
        0,
        IF(
            ISBLANK(Operation_End_Date__c),
            TODAY(),
            Operation_End_Date__c
        ) - Operation_Start_Date__c
    )
)</formula>
    <inlineHelpText>Campo calculado automaticamente. Para unidades ativas, considera a data atual; para unidades encerradas, considera a Data de Encerramento.</inlineHelpText>
    <label>Dias em Operação</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>