force-app/main/default/objects/LT_Logistics_Unit__c/fields/Operating_Model__c.field-meta.xml
<CustomField>
    <fullName>Operating_Model__c</fullName>
    <description>Identifica o modelo de administração e responsabilidade operacional da unidade logística.</description>
    <inlineHelpText>Informe se a unidade é administrada diretamente pela empresa, por uma franquia ou por um parceiro credenciado.</inlineHelpText>
    <label>Modelo Operacional</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Própria</fullName>
            </value>
            <value>
                <fullName>Franqueada</fullName>
            </value>
            <value>
                <fullName>Parceira Credenciada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>