force-app/main/default/objects/LT_Logistics_Unit__c/fields/Operating_Partner__c.field-meta.xml
<CustomField>
    <fullName>Operating_Partner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Empresa parceira, franqueada ou credenciada responsável pela administração da unidade logística.</description>
    <inlineHelpText>Selecione a empresa responsável pela unidade quando o Modelo Operacional for Franqueada ou Parceira Credenciada. Deixe vazio para unidades próprias.</inlineHelpText>
    <label>Parceiro Operacional</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Unidades Operadas</relationshipLabel>
    <relationshipName>Operated_Logistics_Units</relationshipName>
    <type>Lookup</type>
</CustomField>