force-app/main/default/objects/LT_Logistics_Unit__c/fields/Operation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Operation_End_Date__c</fullName>
    <description>Data em que a unidade logística encerrou definitivamente suas atividades.</description>
    <inlineHelpText>Preencha somente quando a unidade for encerrada definitivamente. Suspensões temporárias não devem utilizar este campo.</inlineHelpText>
    <label>Data de Encerramento</label>
    <type>Date</type>
</CustomField>