force-app/main/default/objects/LT_Logistics_Unit__c/fields/Operation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Operation_Start_Date__c</fullName>
    <description>Data efetiva ou prevista para o início das atividades da unidade logística.</description>
    <inlineHelpText>Informe a data em que a unidade iniciou ou está prevista para iniciar suas operações.</inlineHelpText>
    <label>Data de Início da Operação</label>
    <type>Date</type>
</CustomField>