force-app/main/default/objects/LT_Logistics_Unit__c/fields/Parent_Unit__c.field-meta.xml
<CustomField>
    <fullName>Parent_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relaciona a unidade logística à unidade imediatamente superior dentro da estrutura operacional.</description>
    <inlineHelpText>Selecione a unidade responsável diretamente por esta unidade. Exemplo: uma base de entrega deve apontar para o seu centro de distribuição.</inlineHelpText>
    <label>Unidade Superior</label>
    <referenceTo>LT_Logistics_Unit__c</referenceTo>
    <relationshipLabel>Unidades Subordinadas</relationshipLabel>
    <relationshipName>Subordinate_Units</relationshipName>
    <type>Lookup</type>
</CustomField>