force-app/main/default/objects/LT_Logistics_Unit__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Unidade federativa em que a unidade logística está localizada.</description>
    <inlineHelpText>Selecione a sigla do estado onde a unidade está localizada. Para unidades regionais que atendem mais de um estado, o campo pode permanecer vazio.</inlineHelpText>
    <label>Estado (UF)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brazilian_States</valueSetName>
    </valueSet>
</CustomField>