force-app/main/default/objects/LT_Logistics_Unit__c/fields/Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>Unit_Code__c</fullName>
    <description>Código único utilizado para identificar a unidade logística nos sistemas operacionais e nas integrações.</description>
    <externalId>true</externalId>
    <inlineHelpText>Informe a sigla oficial da unidade, incluindo identificação da franquia e estado quando aplicável. Exemplo: ALM-PR ou F IRA-PR.</inlineHelpText>
    <label>Código da Unidade</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>