force-app/main/default/objects/LT_Logistics_Unit__c/fields/Unit_Manager__c.field-meta.xml
<CustomField>
    <fullName>Unit_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Usuário interno responsável pela gestão operacional e administrativa da unidade logística.</description>
    <inlineHelpText>Selecione o usuário Salesforce responsável por acompanhar a operação e os indicadores desta unidade.</inlineHelpText>
    <label>Gestor Responsável</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>O Gestor Responsável deve ser um usuário ativo no Salesforce.</errorMessage>
        <filterItems>
            <field>$User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Somente usuários ativos podem ser selecionados como gestores de unidades logísticas.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Managed_Logistics_Units</relationshipName>
    <type>Lookup</type>
</CustomField>