force-app/main/default/objects/LT_Logistics_Unit__c/fields/Unit_Status__c.field-meta.xml
<CustomField>
    <fullName>Unit_Status__c</fullName>
    <description>Representa a situação atual da unidade logística dentro do seu ciclo de implantação e operação.</description>
    <inlineHelpText>Selecione a situação operacional atual da unidade. Unidades encerradas devem ser mantidas para preservar o histórico.</inlineHelpText>
    <label>Status da Unidade</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planejada</fullName>
            </value>
            <value>
                <fullName>Em Implantação</fullName>
            </value>
            <value>
                <fullName>Ativa</fullName>
            </value>
            <value>
                <fullName>Temporariamente Inativa</fullName>
            </value>
            <value>
                <fullName>Encerrada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>