force-app/main/default/objects/LT_Logistics_Unit__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <description>Classifica a função exercida pela unidade dentro da estrutura logística e administrativa.</description>
    <inlineHelpText>Selecione a função principal exercida pela unidade na operação.</inlineHelpText>
    <label>Tipo da Unidade</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regional</fullName>
            </value>
            <value>
                <fullName>Centro de Distribuição</fullName>
            </value>
            <value>
                <fullName>Base de Entrega</fullName>
            </value>
            <value>
                <fullName>Ponto de Coleta (DropOff)</fullName>
            </value>
            <value>
                <fullName>Ponto de Apoio</fullName>
            </value>
            <value>
                <fullName>Escritório Administrativo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>