force-app/main/default/objects/LT_Logistics_Unit__c/validationRules/LT_Block_Partner_For_Own_Unit.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Block_Partner_For_Own_Unit</fullName>
    <active>true</active>
    <description>Impede o preenchimento do Parceiro Operacional quando o Modelo Operacional da unidade for Própria.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Operating_Model__c, &quot;Própria&quot;),
    NOT(ISBLANK(Operating_Partner__c))
)</errorConditionFormula>
    <errorDisplayField>Operating_Partner__c</errorDisplayField>
    <errorMessage>Unidades próprias não podem possuir Parceiro Operacional. Remova o parceiro ou altere o Modelo Operacional.</errorMessage>
</ValidationRule>