force-app/main/default/objects/LT_Logistics_Unit__c/validationRules/LT_End_Date_Only_When_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_End_Date_Only_When_Closed</fullName>
    <active>true</active>
    <description>Impede o preenchimento da Data de Encerramento quando o Status da Unidade for diferente de Encerrada.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Operation_End_Date__c)),
    NOT(ISPICKVAL(Unit_Status__c, &quot;Encerrada&quot;))
)</errorConditionFormula>
    <errorDisplayField>Operation_End_Date__c</errorDisplayField>
    <errorMessage>A Data de Encerramento somente pode ser preenchida quando o Status da Unidade for Encerrada.</errorMessage>
</ValidationRule>