force-app/main/default/objects/LT_Logistics_Unit__c/validationRules/LT_Require_Location_For_Non_Regional.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Require_Location_For_Non_Regional</fullName>
    <active>true</active>
    <description>Exige o preenchimento de Estado e Cidade para todas as unidades que não sejam do tipo Regional.</description>
    <errorConditionFormula>AND(
    NOT(ISPICKVAL(Unit_Type__c, &quot;Regional&quot;)),
    OR(
        ISBLANK(TEXT(State__c)),
        ISBLANK(City__c)
    )
)</errorConditionFormula>
    <errorMessage>Informe o Estado (UF) e a Cidade para unidades que não sejam do tipo Regional.</errorMessage>
</ValidationRule>