force-app/main/default/objects/LT_Logistics_Unit__c/listViews/LT_Active_Logistics_Units_View.listView-meta.xml
<ListView>
    <fullName>LT_Active_Logistics_Units_View</fullName>
    <columns>NAME</columns>
    <columns>Unit_Code__c</columns>
    <columns>Unit_Status__c</columns>
    <columns>Unit_Type__c</columns>
    <columns>Operating_Model__c</columns>
    <columns>Parent_Unit__c</columns>
    <columns>State__c</columns>
    <columns>City__c</columns>
    <columns>Unit_Manager__c</columns>
    <columns>Operating_Partner__c</columns>
    <columns>Daily_Operational_Capacity__c</columns>
    <columns>Operation_Start_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Unit_Status__c</field>
        <operation>equals</operation>
        <value>Ativa</value>
    </filters>
    <label>Unidades Logísticas Ativas</label>
</ListView>